--- a/scss/header.scss
+++ b/scss/header.scss
@@ -5,7 +5,7 @@
 -----------------------------------*/
 header {
 	position: fixed;
-	top: 72px;
+	top: 9.6vw;
 	width: 100%;
 
 	section {
@@ -14,10 +14,10 @@ header {
 		> h1 {
 			align-items: center;
     		display: flex;
-    		font-size: 32px;
-    		height: 59px;
-    		margin-left: 60px;
-    		width: 114px;
+    		font-size: 4.3vw;
+    		height: 7.9vw;
+    		margin-left: 8vw;
+    		width: 15.2vw;
 		}
 
 		.flex-wrapper {
@@ -30,14 +30,14 @@ header {
 			.mail {
 				position: absolute;
 				top: 100%;
-				right: 80px;
+				right: 10.7vw;
 				transform: translate(0, -50%);
 
 				span {
 					background-color: $MAIN_COLOR ;
 					display: block;
-					height: 80px;
-					width: 80px;
+					height: 10.7vw;
+					width: 10.7vw;
 				}
 			}
 
@@ -50,21 +50,47 @@ header {
 
 @media screen and (min-width: $MIN_SP_WIDTH) {
 header {
+	position: fixed;
+	top: 3.8vw;
 
 	section {
+		display: flex;
+
+		> h1 {
+			align-items: center;
+    		display: flex;
+    		font-size: 2vw;
+    		height: 3vw;
+    		margin-left: 3vw;
+    		width: 6vw;
+		}
 
 		.flex-wrapper {
 
+			.mail {
+				position: absolute;
+				top: 100%;
+				right: 4.1vw;
+				transform: translate(0, -50%);
+
+				span {
+					background-color: $MAIN_COLOR ;
+					display: block;
+					height: 4.1vw;
+					width: 4.1vw;
+				}
+			}
+
 			.h-nv {
 				display: block;
-				margin-right: 240px;
+				margin-right: 12.5vw;
 
 				ul {
 					display: flex;
 					justify-content: space-between;
 
 					li:not(:last-of-type) {
-						margin-right: 40px;
+						margin-right: 2.1vw;
 					}
 				}
 			}
