--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -52,11 +52,17 @@ q:before, q:after {
 }
 
 a {
+    color: #000;
     margin:0;
     padding:0;
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: none;
+    }
 }
 
 /* change colours to suit your needs */
@@ -100,4 +106,8 @@ hr {
 
 input, select {
     vertical-align:middle;
+}
+
+ul {
+    list-style: none;
 }
