--- a/css/index.css
+++ b/css/index.css
@@ -3,20 +3,26 @@
 /*=======*/
 /* main-visual
 -----------------------------------*/
-.index .main-visual { margin-top: 240px; }
+.index .main-visual { margin-top: 32vw; }
 
 .index .main-visual .img-area { background-color: #666; height: 80vw; margin: 0 auto; width: 100%; }
 
-@media screen and (min-width: 768px) { .index .main-visual { margin-top: 240px; }
-  .index .main-visual .img-area { margin: 0 auto; width: 1440px; } }
+@media screen and (min-width: 768px) { .index .main-visual { margin-top: 12.5vw; }
+  .index .main-visual .img-area { margin: 0 auto; height: 31.25vw; width: 75vw; } }
 
 /* what-we-are
 -----------------------------------*/
-.index .what-we-are { margin-top: 40.4vw; }
+.index .what-we-are { margin-top: 60.6vw; }
 
 .index .what-we-are .tx-area { margin: 15.3vw auto 0; width: 77.9vw; }
 
 .index .what-we-are .tx-area p:not(:last-of-type) { margin-bottom: 12.3vw; }
+
+@media screen and (min-width: 768px) { .index .what-we-are { margin: 23.6vw 16.7vw 0; }
+  .index .what-we-are .heading02 { text-align: left; }
+  .index .what-we-are .tx-area { float: right; margin: 0; width: 25.3vw; }
+  .index .what-we-are .tx-area p:not(:last-of-type) { margin-bottom: 1.8vw; }
+  .index .what-we-are .buttonOverlay { float: left; } }
 
 /* what-we-do
 -----------------------------------*/
@@ -29,6 +35,9 @@
 .index .what-we-do .circle-wrapper .circle-area:nth-of-type(2) { -ms-grid-column: 2; -ms-grid-column-span: 2; grid-column: 2/4; margin-top: 11vw; }
 
 .index .what-we-do .circle-wrapper .circle-area:last-of-type { -ms-grid-column: 3; -ms-grid-column-span: 2; grid-column: 3/5; margin-top: 11vw; }
+
+@media screen and (min-width: 768px) { .index .what-we-do { margin-top: 13.3vw; }
+  .index .what-we-do .heading02 { text-align: right; } }
 
 /* we-worked
 -----------------------------------*/
