--- a/scss/header.scss
+++ b/scss/header.scss
@@ -18,6 +18,7 @@ header {
     		height: 7.9vw;
     		margin-left: 8vw;
     		width: 15.2vw;
+    		background-color: #000;
 		}
 
 		.flex-wrapper {
