--- a/scss/buttonOverlay.scss
+++ b/scss/buttonOverlay.scss
@@ -49,3 +49,40 @@
 		}
 	}
 }
+
+@media screen and (min-width: $MIN_SP_WIDTH) {
+.buttonOverlay {
+	margin-top: 16vw;
+
+	a {
+		height: 4.1vw;
+		width: 16.7vw;
+
+		span {
+	    	position: absolute;
+	    	top: 50%;
+	    	left: 50%;
+	    	color: #fff;
+	    	font-size: 1.2vw;
+	    	font-weight: bold;
+	    	transform: translate(-50%, -50%);
+	    	letter-spacing: .2em;
+	    }
+
+		&::before {
+		    content: '';
+		    position: absolute;
+		    height: 100%;
+		    width: 100%;
+		    top: 0.8vw;
+		    right: 0.8vw;
+		    background-color: $MAIN_COLOR;
+		    z-index: -1;
+		    transition: transform .2s ease-in-out;
+		}
+		&:hover::before {
+    		transform: translate(0.8vw, -0.8vw);
+		}
+}
+}
+}
