--- a/css/import.css
+++ b/css/import.css
@@ -6,7 +6,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 
 *, *::before, *::after { -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-body { line-height: 1; }
+body { line-height: 1; font-family: "Noto Sans JP"; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 
@@ -124,6 +124,9 @@ ul { list-style: none; }
   100% { -webkit-transform: translateX(0px); transform: translateX(0px);
     opacity: 1; } }
 
+@media screen and (min-width: 768px) { .textRightLeft { height: 12.5vw; width: 75vw; }
+  .textRightLeft a span { font-size: 2.1vw; } }
+
 /* アコーディオン
 -----------------------------------*/
 header { position: relative; }
@@ -229,3 +232,6 @@ header section .flex-wrapper .h-nv { display: none; }
 footer { display: -webkit-box; display: -ms-flexbox; display: flex; height: 31.9vw; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
 footer p { font-size: 1.6vw; }
+
+@media screen and (min-width: 768px) { footer { height: 12.4vw; }
+  footer p { font-size: 0.6vw; } }
