--- a/scss/textRightLeft.scss
+++ b/scss/textRightLeft.scss
@@ -47,3 +47,17 @@
         opacity: 1;
     }
 }
+
+@media screen and (min-width: $MIN_SP_WIDTH) {
+.textRightLeft {
+    height: 12.5vw;
+    width: 75vw;
+
+    a {
+        
+        span {
+            font-size: 2.1vw;
+        }
+    }
+}
+}
