--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,21 @@
 @media screen and (min-width: 768px) { .index .we-worked { margin-top: 9.6vw; }
   .index .we-worked .slick-list { margin: 0 auto; }
   .index .we-worked .slick-list .slide-img { width: 20.8vw; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(1), .index .we-worked .slick-list .slide-img:nth-of-type(2), .index .we-worked .slick-list .slide-img:nth-of-type(3), .index .we-worked .slick-list .slide-img:nth-of-type(4), .index .we-worked .slick-list .slide-img:nth-of-type(5) { margin: auto; padding: 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(1) { margin: auto; padding: 10.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(2) { margin: auto; padding: 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(3) { margin: auto; padding: 3.9vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(4) { margin: auto; padding: 12.4vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(5) { margin: auto; padding: 4.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(6) { margin: auto; padding: 10.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(7) { margin: auto; padding: 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(8) { margin: auto; padding: 3.9vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(9) { margin: auto; padding: 12.4vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(10) { margin: auto; padding: 4.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(11) { margin: auto; padding: 10.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(12) { margin: auto; padding: 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(13) { margin: auto; padding: 3.9vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(14) { margin: auto; padding: 12.4vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(15) { margin: auto; padding: 4.3vw 0 0; }
   .index .we-worked .slick-list .slide-img:not(:last-of-type) { margin-bottom: 0; }
   .index .we-worked .slick-list .slide-img a { display: block; position: relative; height: 11.8vw; width: 20.8vw; margin: 0 auto; }
   .index .we-worked .slick-list .slide-img a .img-area { background-color: #666; height: 100%; width: 100%; }
