--- a/scss/index.scss
+++ b/scss/index.scss
@@ -239,13 +239,79 @@
 		.slide-img {
 			width: 20.8vw;
 
-			&:nth-of-type(1),
-			&:nth-of-type(2),
-			&:nth-of-type(3),
-			&:nth-of-type(4),
-			&:nth-of-type(5) {
+			&:nth-of-type(1) {
+				margin: auto;
+				padding: 10.3vw 0 0;
+			}
+
+			&:nth-of-type(2) {
 				margin: auto;
 				padding: 0;
+			}
+
+			&:nth-of-type(3) {
+				margin: auto;
+				padding: 3.9vw 0 0;
+			}
+
+			&:nth-of-type(4) {
+				margin: auto;
+				padding: 12.4vw 0 0;
+			}
+
+			&:nth-of-type(5) {
+				margin: auto;
+				padding: 4.3vw 0 0;
+			}
+
+			&:nth-of-type(6) {
+				margin: auto;
+				padding: 10.3vw 0 0;
+			}
+
+			&:nth-of-type(7) {
+				margin: auto;
+				padding: 0;
+			}
+
+			&:nth-of-type(8) {
+				margin: auto;
+				padding: 3.9vw 0 0;
+			}
+
+			&:nth-of-type(9){
+				margin: auto;
+				padding: 12.4vw 0 0;
+			}
+
+			&:nth-of-type(10) {
+				margin: auto;
+				padding: 4.3vw 0 0;
+			}
+
+			&:nth-of-type(11) {
+				margin: auto;
+				padding: 10.3vw 0 0;
+			}
+
+			&:nth-of-type(12) {
+				margin: auto;
+				padding: 0;
+			}
+
+			&:nth-of-type(13){
+				margin: auto;
+				padding: 3.9vw 0 0;
+			}
+
+			&:nth-of-type(14) {
+				margin: auto;
+				padding: 12.4vw 0 0;
+			}
+
+			&:nth-of-type(15) {
+				margin: auto;
+				padding: 4.3vw 0 0;
 			}
 
 			&:not(:last-of-type) {
