--- a/css/import.css
+++ b/css/import.css
@@ -129,15 +129,15 @@ ul { list-style: none; }
 
 .lineThrough { position: relative; display: block; cursor: pointer; }
 
-.lineThrough:before, .lineThrough:after { content: ''; position: absolute; width: 0%; height: 2px; top: 50%; margin-top: -0.5px; background: #fff; }
+.lineThrough::before, .lineThrough::after { content: ''; position: absolute; width: 0%; height: 2px; top: 50%; margin-top: -0.5px; background: #fff; }
 
-.lineThrough:before { left: -2.5px; }
+.lineThrough::before { left: -2.5px; }
 
-.lineThrough:after { right: 2.5px; background: #000; -webkit-transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); -o-transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); }
+.lineThrough::after { right: 2.5px; background: #000; -webkit-transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); -o-transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); }
 
-.lineThrough:hover:before { background: #000; width: 100%; -webkit-transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); -o-transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); }
+.lineThrough:hover::before { background: #000; width: 100%; -webkit-transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); -o-transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1); }
 
-.lineThrough:hover:after { background: transparent; width: 100%; -webkit-transition: 0s; -o-transition: 0s; transition: 0s; }
+.lineThrough::hover:after { background: transparent; width: 100%; -webkit-transition: 0s; -o-transition: 0s; transition: 0s; }
 
 /* アコーディオン
 -----------------------------------*/
@@ -221,28 +221,33 @@ header .menu .g-nv { display: none; }
 
 /* header
 -----------------------------------*/
-header { position: fixed; top: 9.6vw; width: 100%; }
+header { position: fixed; top: 0; height: 22.9vw; width: 100%; z-index: 100; }
 
-header section { display: -webkit-box; display: -ms-flexbox; display: flex; }
+header .headerInner { margin-top: 9.6vw; }
 
-header section > h1 { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; font-size: 4.3vw; height: 7.9vw; margin-left: 8vw; width: 15.2vw; background-color: #000; }
+header .headerInner section { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-header section .flex-wrapper { -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; position: relative; margin: 0 0 0 auto; }
+header .headerInner section > h1 { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; font-size: 4.3vw; height: 7.9vw; margin-left: 8vw; width: 15.2vw; background-color: #000; }
 
-header section .flex-wrapper .mail { position: absolute; top: 100%; right: 10.7vw; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); }
+header .headerInner section .flex-wrapper { -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; position: relative; margin: 0 0 0 auto; }
 
-header section .flex-wrapper .mail span { background-color: #000; display: block; height: 10.7vw; width: 10.7vw; }
+header .headerInner section .flex-wrapper .mail { position: absolute; top: 100%; right: 10.7vw; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); }
 
-header section .flex-wrapper .h-nv { display: none; }
+header .headerInner section .flex-wrapper .mail span { background-color: #000; display: block; height: 10.7vw; width: 10.7vw; }
 
-@media screen and (min-width: 768px) { header { position: fixed; top: 3.8vw; }
-  header section { display: -webkit-box; display: -ms-flexbox; display: flex; }
-  header section > h1 { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; font-size: 2vw; height: 3vw; margin-left: 3vw; width: 6vw; }
-  header section .flex-wrapper .mail { position: absolute; top: 100%; right: 4.1vw; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); }
-  header section .flex-wrapper .mail span { background-color: #000; display: block; height: 4.1vw; width: 4.1vw; }
-  header section .flex-wrapper .h-nv { display: block; margin-right: 12.5vw; }
-  header section .flex-wrapper .h-nv ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-  header section .flex-wrapper .h-nv ul li:not(:last-of-type) { margin-right: 2.1vw; } }
+header .headerInner section .flex-wrapper .h-nv { display: none; }
+
+header.white { background-color: #FFF; }
+
+@media screen and (min-width: 768px) { header { height: 8.8vw; }
+  header .headerInner { margin-top: 3.8vw; }
+  header .headerInner section { display: -webkit-box; display: -ms-flexbox; display: flex; }
+  header .headerInner section > h1 { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; font-size: 2vw; height: 3vw; margin-left: 3vw; width: 6vw; }
+  header .headerInner section .flex-wrapper .mail { position: absolute; top: 100%; right: 4.1vw; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); }
+  header .headerInner section .flex-wrapper .mail span { background-color: #000; display: block; height: 4.1vw; width: 4.1vw; }
+  header .headerInner section .flex-wrapper .h-nv { display: block; margin-right: 12.5vw; }
+  header .headerInner section .flex-wrapper .h-nv ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+  header .headerInner section .flex-wrapper .h-nv ul li:not(:last-of-type) { margin-right: 2.1vw; } }
 
 /*==========*/
 /* フッター */
