--- a/css/index.css
+++ b/css/index.css
@@ -36,10 +36,11 @@
 
 .index .what-we-do .circle-wrapper .circle-area:last-of-type { -ms-grid-column: 3; -ms-grid-column-span: 2; grid-column: 3/5; margin-top: 11vw; }
 
-@media screen and (min-width: 768px) { .index .what-we-do { margin-top: 13.3vw; }
+@media screen and (min-width: 768px) { .index .what-we-do { margin-top: 0; padding-top: 13.3vw; }
   .index .what-we-do .heading02 { text-align: right; margin-right: 16.7vw; }
-  .index .what-we-do .circle-wrapper { -ms-grid-columns: (1fr)[4]; grid-template-columns: repeat(4, 1fr); margin: 2vw 25.8vw 0 21.3vw; width: 52.8vw; }
+  .index .what-we-do .circle-wrapper { -ms-grid-columns: (1fr)[4]; grid-template-columns: repeat(4, 1fr); margin: 2vw 25.8vw 0 21.3vw; width: 52.8vw; height: 26.92vw; }
   .index .what-we-do .circle-wrapper .circle-area { width: 13.4vw; }
+  .index .what-we-do .circle-wrapper .circle-area#cia1, .index .what-we-do .circle-wrapper .circle-area#cia2 { -webkit-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
   .index .what-we-do .circle-wrapper .circle-area:first-of-type { -ms-grid-column: 1; -ms-grid-column-span: 1; grid-column: 1/2; }
   .index .what-we-do .circle-wrapper .circle-area:nth-of-type(2) { margin: 4.2vw auto 0; }
   .index .what-we-do .circle-wrapper .circle-area:last-of-type { -ms-grid-column: 4; -ms-grid-column-span: 1; grid-column: 4/5; margin: 8.3vw 0 0 auto; }
@@ -78,21 +79,11 @@
 @media screen and (min-width: 768px) { .index .we-worked { margin-top: 9.6vw; }
   .index .we-worked .slick-list { margin: 0 auto; }
   .index .we-worked .slick-list .slide-img { width: 20.8vw; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(1) { margin: auto; padding: 10.3vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(2) { margin: auto; padding: 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(3) { margin: auto; padding: 3.9vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(4) { margin: auto; padding: 12.4vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(5) { margin: auto; padding: 4.3vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(6) { margin: auto; padding: 10.3vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(7) { margin: auto; padding: 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(8) { margin: auto; padding: 3.9vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(9) { margin: auto; padding: 12.4vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(10) { margin: auto; padding: 4.3vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(11) { margin: auto; padding: 10.3vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(12) { margin: auto; padding: 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(13) { margin: auto; padding: 3.9vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(14) { margin: auto; padding: 12.4vw 0 0; }
-  .index .we-worked .slick-list .slide-img:nth-of-type(15) { margin: auto; padding: 4.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(1), .index .we-worked .slick-list .slide-img:nth-of-type(6), .index .we-worked .slick-list .slide-img:nth-of-type(11) { margin: auto; padding: 10.3vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(2), .index .we-worked .slick-list .slide-img:nth-of-type(7), .index .we-worked .slick-list .slide-img:nth-of-type(12) { margin: auto; padding: 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(3), .index .we-worked .slick-list .slide-img:nth-of-type(8), .index .we-worked .slick-list .slide-img:nth-of-type(13) { margin: auto; padding: 3.9vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(4), .index .we-worked .slick-list .slide-img:nth-of-type(9), .index .we-worked .slick-list .slide-img:nth-of-type(14) { margin: auto; padding: 12.4vw 0 0; }
+  .index .we-worked .slick-list .slide-img:nth-of-type(5), .index .we-worked .slick-list .slide-img:nth-of-type(10), .index .we-worked .slick-list .slide-img:nth-of-type(15) { margin: auto; padding: 4.3vw 0 0; }
   .index .we-worked .slick-list .slide-img:not(:last-of-type) { margin-bottom: 0; }
   .index .we-worked .slick-list .slide-img a { display: block; position: relative; height: 11.8vw; width: 20.8vw; margin: 0 auto; }
   .index .we-worked .slick-list .slide-img a .img-area { background-color: #666; height: 100%; width: 100%; }
