--- a/scss/lineThrough.scss
+++ b/scss/lineThrough.scss
@@ -2,35 +2,37 @@
     position: relative;
     display: block;
     cursor: pointer;
-}
 
-.lineThrough:before, .lineThrough:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    top: 50%;
-    margin-top: -0.5px;
-    background: #fff;
-}
+    &::before, 
+    &::after {
+        content: '';
+        position: absolute;
+        width: 0%;
+        height: 2px;
+        top: 50%;
+        margin-top: -0.5px;
+        background: #fff;
+    }
 
-.lineThrough:before {
-    left: -2.5px;
-}
-.lineThrough:after {
-    right: 2.5px;
-    background: $MAIN_COLOR;
-    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
+    &::before {
+        left: -2.5px;
+    }
 
-.lineThrough:hover:before {
-    background: $MAIN_COLOR;
-    width: 100%;
-    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
+    &::after {
+        right: 2.5px;
+        background: $MAIN_COLOR;
+        transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
 
-.lineThrough:hover:after {
-    background: transparent;
-    width: 100%;
-    transition: 0s;
+    &:hover::before {
+        background: $MAIN_COLOR;
+        width: 100%;
+        transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+
+    &::hover:after {
+        background: transparent;
+        width: 100%;
+        transition: 0s;
+    }
 }
