--- a/scss/accordion.scss
+++ b/scss/accordion.scss
@@ -1,9 +1,79 @@
 /* アコーディオン
 -----------------------------------*/
-header {
+.drawer-wrapper{
     position: relative;
+    z-index: 100;
+    
+    .g-nv.opened {
+        left: 0;
 
-    .g-nv ul {
+        li {
+            left: 0;
+
+            &:nth-of-type(1) {
+                transition-delay: 0.3s;
+            }
+
+            &:nth-of-type(2) {
+                transition-delay: 0.6s;
+            }
+
+            &:nth-of-type(3) {
+                transition-delay: 0.9s;
+            }
+
+            &:nth-of-type(4) {
+                transition-delay: 1.2s;
+            }
+        }
+    }
+
+    .g-nv {
+        background-color: #FFF;
+        left: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        transition: left 0.5s ease;
+        width: 100%;
+
+        li {
+            left: 100vw;
+            font-size: 4.5vh;
+            font-weight: bold;
+            height: 20%;
+            position: absolute;
+            transition: left 0.5s ease;
+            width: 100%;
+
+            &:nth-of-type(1) {
+                transition-delay: 0s;
+                top: 3%;
+            }
+
+            &:nth-of-type(2) {
+                transition-delay: 0s;
+                top: 23%;
+            }
+
+            &:nth-of-type(3){
+                transition-delay: 0s;
+                top: 43%;
+            }
+
+            &:nth-of-type(4) {
+                transition-delay: 0s;
+                top: 63%;
+            }
+
+            a {
+                align-items: center;
+                display: flex;
+                height: 100%;
+                padding-left: 5.2vw;
+                width: 100%;
+            }
+        }
     }
 
     .menu {
@@ -13,13 +83,14 @@ header {
         width: 8.5vw;
         height: 5vw;
         cursor: pointer;
-        z-index: 101;
+        z-index: 100;
 
         .menu-inner {
             position: relative;
             width: 100%;
             display: block;
             margin: auto;
+            z-index: 100;
 
             span {
                 position: absolute;
@@ -45,12 +116,13 @@ header {
         }
 
         &.pushed {
+            top: 90%;
 
             .menu-inner span {
 
                 &:first-child {
                     top: 2.1vw;
-                    left: -0.6vw;
+                    left: -.6vw;
                     transform: rotate(45deg);
                 }
 
@@ -60,20 +132,16 @@ header {
 
                 &:last-child {
                     top: 2.1vw;
-                    left: -0.6vw;
+                    left: -.6vw;
                     transform: rotate(-45deg);
                 }
             }
-        }
-
-        .g-nv {
-            display: none;
         }
     }
 }
 
 @media screen and (min-width: $MIN_SP_WIDTH) {
-header {
+.drawer-wrapper{
 
     .menu {
         top: 50vh;
